# IOT-Robotic-Arm

./: .gitignore  build_pipeline_image.txt  docker-compose.yml
IoT-Robotic-Arm/: .gitignore  LICENSE.md  README.md  mlflow.db  pyproject.toml  setup.py  train_yolo.py
IoT-Robotic-Arm/Arduino_code/: Servo.ino
IoT-Robotic-Arm/anime_recommendation_system.egg-info/: PKG-INFO
IoT-Robotic-Arm/models/: position_to_angle_model.pkl
IoT-Robotic-Arm/sc/: train_model.py
IoT-Robotic-Arm/scripts/: backup.json  camera_control.py  convert_to_onnx.py  download_minio_images.py  mlflow.db  plot_graph.py  position_graph.py  saved_positions.json  train_yolo.py
IoT-Robotic-Arm/scripts/data/waste_dataset/: data.yaml
IoT-Robotic-Arm/scripts/mlruns/1/11bd7dfa85604418addc2e9e9b7c4a73/artifacts/: args.yaml
IoT-Robotic-Arm/src/: main.py  test_threads.py
IoT-Robotic-Arm/src/config/: config.py
IoT-Robotic-Arm/src/controller/: robotic_arm_controller.py  servo_controller.py
IoT-Robotic-Arm/src/detector/: bbox_utils.py  object_detector.py
IoT-Robotic-Arm/src/utils/: logger.py
IoT-Robotic-Arm/src/yolo/: args.yaml
airflow/: .gitignore  Dockerfile  docker-compose.override.yml  requirements.txt
airflow/dags/: yolo_iterative_training_dag.py
airflow/include/iterative_training/: config.py  main.py  (+5 more)
dashboard_backend/: .gitignore  consumer.py  dashboard.db  database.py  main.py  mock_publisher.py  models.py  pyproject.toml  requirements.txt  websocket_manager.py
dashboard_frontend/: index.html  package-lock.json  package.json
dashboard_frontend/src/: App.tsx  index.css
(+20 files in other folders)
