[project]
name = "iot-robotic-arm"
version = "0.1.0"
description = "IoT Robotic Arm Controller with YOLO-based object detection"
authors = [{ name = "Nevin A S", email = "nevinajithkumar@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.2",
    "opencv-python>=4.13.0.92",
    "pyserial>=3.5",
    "ultralytics[lap]>=8.4.14",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "rich>=14.3.3",
    "kafka-python-ng>=2.2.3",
    "lap>=0.5.12",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }
